tests/samples/valid/nominal_typing.pn
struct Test
{
	a: Foo,
	b: Bar,
	c: Foo,
}

struct Foo
{
	value: i32,
}

struct Bar
{
	value: i32,
}
