tests/samples/invalid/view_as_member.pn
struct SmallVec
{
	illegal_because_unknown_size: []i32,
}
